--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tarojs/runtime": "3.1.4",
     "@tarojs/taro": "3.1.4",
     "dayjs": "^1.10.4",
+    "echarts-taro3-react": "^1.0.11",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
